--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
           <a class="navbar-brand" routerLink="/home"> Product Name </a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isMenuCollapsed">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav me-auto">
               <li class="nav-item divider-vertical d-none d-lg-block"></li>
 
               <li class="nav-item">
