fix: margin and padding
Add proper margin class for page footer
Add px-3 to the support panel

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -129,12 +129,15 @@
 
                 <div role="menu" ngbDropdownMenu>
                   <div class="section-head hidden-xs">Support</div>
-                  <input
+                  <div class="px-3">
+                   <input
                     type="text"
-                    class="form-control form-control-sm dropdown-search-item"
+                    class="form-control form-control-sm"
                     placeholder="Search"
                     aria-label="Search"
                   />
+                  </div>
+
                   <a ngbDropdownItem href="">Support Topic 1</a>
                   <a ngbDropdownItem href="">Support Topic 2</a>
                   <a ngbDropdownItem href="">See All Support Topics</a>
