--- a/client/src/app/shared/footer/footer.component.html
+++ b/client/src/app/shared/footer/footer.component.html
@@ -20,8 +20,8 @@
       <div class="col-xs-12 col-md-4 col-lg-6">
         <div class="d-flex justify-content-center justify-content-sm-end align-items-sm-center">
           <a class="d-block" href="">Legal</a>
-          <a class="d-block ml-3" routerLink="/accessibility">Accessibility</a>
-          <a class="d-block ml-3" href="">Contact us</a>
+          <a class="d-block ms-3" routerLink="/accessibility">Accessibility</a>
+          <a class="d-block ms-3" href="">Contact us</a>
         </div>
       </div>
     </div>
